update usership numbers across all languages

--- a/index.de.qmd
+++ b/index.de.qmd
@@ -28,11 +28,11 @@ knitr::include_graphics(here::here("images", "Epi R Handbook banner beige 1500x5
 
 ## R für angewandte Epidemiologie und öffentliches Gesundheitswesen {-}
 
-**Verwendung** Dieses Handbuch wurde über **1 Million Mal von 450.000 Menschen** auf der ganzen Welt genutzt.
+**Verwendung** Dieses Handbuch wurde über **3 Million Mal von 850.000 Menschen** auf der ganzen Welt genutzt.
 
 **Zielsetzung:** Als schnelles R-Code-Referenzhandbuch dienen (online und **[offline](#data-used))**) mit aufgabenzentrierten Beispielen, die häufige epidemiologische Probleme behandeln.
 
-**Du fängst gerade erst mit R an?** Probiere unser **[kostenlosen interaktiven Tutorien](https://www.appliedepi.org/tutorial/)** oder synchrone, virtuelle **[Einführungskurs](https://www.appliedepi.org/live/)** wird von der US CDC, der WHO und mehr als 75 anderen Gesundheitsbehörden und Epi-Schulungsprogrammen auf der ganzen Welt verwendet.
+**Du fängst gerade erst mit R an?** Probiere unser **[kostenlosen interaktiven Tutorien](https://www.appliedepi.org/tutorial/)** oder synchrone, virtuelle **[Einführungskurs](https://www.appliedepi.org/live/)** wird von der US CDC, der WHO und mehr als 400 anderen Gesundheitsbehörden und Epi-Schulungsprogrammen auf der ganzen Welt verwendet.
 
 **Sprachen:** [Französisch (Français)](https://epirhandbook.com/fr), [Spanisch (Español)](https://epirhandbook.com/es/), [Vietnamesisch (Tiếng Việt)](https://epirhandbook.com/vn/), [Japanisch (日本)](https://epirhandbook.com/jp/), [Türkisch (Türkçe)](https://epirhandbook.com/tr/), [Portugiesisch (Português)](https://epirhandbook.com/pt), [Russisch (Русский)](https://epirhandbook.com/ru)
 
@@ -78,9 +78,9 @@ als Spaltentrennzeichen -->
 
 - Besuche unsere **[Website](http://www.appliedepi.org)** und **[tritt in unsere Kontaktliste ein](https://forms.gle/9awNd8syypTSYUsn7)**
 - **[contact@appliedepi.org](mailto:contact@appliedepi.org)** tweet **[@appliedepi](https://twitter.com/appliedepi)**, oder **[LinkedIn](www.linkedin.com/company/appliedepi)**
-- Themen an unser **[Github-Repository](https://github.com/appliedepi/epiRhandbook_eng)**
+- Themen an unser **[Github-Repository](https://github.com/appliedepi/epirhandbook_eng)**
 
-**Wir bieten Live-R-Schulungen an** von Dozenten mit jahrzehntelanger Erfahrung in der angewandten Epidemiologie an - schick uns eine E-Mail, um darüber zu sprechen.
+**Wir bieten Live-R-Schulungen an** von Dozenten mit jahrzehntelanger Erfahrung in der angewandten Epidemiologie an - [www.appliedepi.org/live](www.appliedepi.org/live).
 :::
 
 ::::
