--- a/index.es.qmd
+++ b/index.es.qmd
@@ -28,12 +28,12 @@ knitr::include_graphics(here::here("images", "Epi R Handbook Banner Spanish en e
 
 ## R para epidemiología aplicada y salud pública {-}  
 
-**Utilización**: Este manual ha sido utilizado más de **1 millón de veces por 300.000 personas** en todo el mundo.
+**Utilización**: Este manual ha sido utilizado más de **3 millón de veces por 850.000 personas** en todo el mundo.
 
 
 **Objetivo:** Servir como breve guía de referencia para escribir código en R (en línea y [**versión sin conexión**](#download-handbook-and-data)) con ejemplos detallados que aborden problemas epidemiológicos.  
 
-**¿Estás empezando con R?** Prueba nuestros **[tutoriales interactivos gratuitos](https://www.appliedepi.org/tutorial/)** o **[el curso de introducción](https://www.appliedepi.org/live/)** sincrónico, utilizado por los CDC de EE.UU., la OMS, y más de 75 agencias de salud y programas de formación de Epi de campo.  
+**¿Estás empezando con R?** Prueba nuestros **[tutoriales interactivos gratuitos](https://www.appliedepi.org/tutorial/)** o **[el curso de introducción](https://www.appliedepi.org/live/)** sincrónico, utilizado por los CDC de EE.UU., la OMS, y más de 400 agencias de salud y programas de formación de Epi de campo.  
 
 **Idiomas:** [Inglés (English)](https://www.epirhandbook.com/en), [Francés (Français)](https://epirhandbook.com/fr), [Español](https://epirhandbook.com/es/), [Vietnamita (Tiếng Việt)](https://epirhandbook.com/vn/), [Japonés (日本)](https://epirhandbook.com/jp/), [Turco (Türkçe)](https://epirhandbook.com/tr/), [Portugués (Português)](https://epirhandbook.com/pt),  [Ruso (Русский)](https://epirhandbook.com/ru)  
 
@@ -76,7 +76,7 @@ a column separator -->
 * Email **contact@appliedepi.org**, tweet **[\@epiRhandbook](https://twitter.com/epirhandbook)**  o  [Linkedin](https://www.linkedin.com/company/appliedepi)
 * Envía problemas a nuestro **[repositorio Github](https://github.com/appliedepi/epiRhandbook_eng)**  
 
-**Ofrecemos formación en R** impartida por instructores con décadas de experiencia en epidemiología aplicada - envíanos un correo electrónico para hablar de ello.
+**Ofrecemos formación en R** impartida por instructores con décadas de experiencia en epidemiología aplicada - [www.appliedepi.org/live](www.appliedepi.org/live).
 
 
 :::
