--- a/index.fr.qmd
+++ b/index.fr.qmd
@@ -28,7 +28,7 @@ knitr::include_graphics(here::here("images", "Epi R Handbook Banner French 1500 
 
 ## R pour l'épidémiologie appliquée et la santé publique {-}  
 
-**Utilisation** : Ce manuel a été utilisé **plus d'un million de fois par 400 000 personnes** dans le monde entier.
+**Utilisation** : Ce manuel a été utilisé **plus de 3 millions de fois par 850 000 personnes** dans le monde entier.
 
 **Objectif:** Servir de manuel de référence rapide du code R (en ligne et **[hors line](#download_book_data)**) avec des exemples centrés sur la tâche qui traitent des problèmes épidémiologiques courants.  
 
@@ -63,9 +63,9 @@ a column separator -->
 
 * Visitez notre **[site web](http://www.appliedepi.org)** et **[rejoignez notre liste de contacts](https://forms.gle/9awNd8syypTSYUsn7)**.  
 * **contact@appliedepi.org**, tweeter **[\@appliedepi](https://twitter.com/appliedepi)**, ou **[LinkedIn](https://linkedin.com/company/appliedepi)**  
-* Soumettre des problèmes à notre **[dépôt Github](https://github.com/appliedepi/epiRhandbook_eng)**  
+* Soumettre des problèmes à notre **[dépôt Github](https://github.com/appliedepi/epirhandbook_eng)**  
 
-**Nous proposons des formations R en direct** dispensées par des formateurs ayant des décennies d'expérience en épidémiologie appliquée - envoyez-nous un courriel pour en discuter.
+**Nous proposons des formations R en direct** dispensées par des formateurs ayant des décennies d'expérience en épidémiologie appliquée - [www.appliedepi.org/live](www.appliedepi.org/live).
 :::
 
 :::: 
