--- a/index.pt.qmd
+++ b/index.pt.qmd
@@ -30,11 +30,11 @@ knitr::include_graphics(here::here("images", "Epi R Handbook Banner Portuguese 1
 
 ## R para epidemiologia aplicada e saúde pública {.unnumbered}
 
-**Uso**: Esse manual já foi utilizado mais de **1 milhão de vezes por 450,000 pessoas** ao redor do mundo.
+**Uso**: Esse manual já foi utilizado mais de **3 milhão de vezes por 850,000 pessoas** ao redor do mundo.
 
 **Objetivo:** Servir como um guia de referência rápido para escrever código em R (online e [**offline**](#data-used)) com exemplos centrados em exercícios que abordam problemas epidemiológicos comuns.
 
-**Você está começando a aprender R agora?** Conheça nossos [**tutoriais interativos gratuitos**](https://www.appliedepi.org/tutorial/) ou o [**curso introdutório**](https://www.appliedepi.org/live/) síncrono e virtual utilizado pelo CDC dos EUA, pela OMS, e mais de 75 outras agências de saúde e programas de treinamento em Epidemiologia de Campo.
+**Você está começando a aprender R agora?** Conheça nossos [**tutoriais interativos gratuitos**](https://www.appliedepi.org/tutorial/) ou o [**curso introdutório**](https://www.appliedepi.org/live/) síncrono e virtual utilizado pelo CDC dos EUA, pela OMS, e mais de 400 outras agências de saúde e programas de treinamento em Epidemiologia de Campo.
 
 **Idiomas:** [Inglês (English)](https://www.epirhandbook.com/en), [Francês (Français)](https://epirhandbook.com/fr), [Espanhol (Español)](https://epirhandbook.com/es/), [Vietnamita (Tiếng Việt)](https://epirhandbook.com/vn/), [Japonês (日本)](https://epirhandbook.com/jp/), [Turco (Türkçe)](https://epirhandbook.com/tr/), [Português](https://epirhandbook.com/pt),  [Russo (Русский)](https://epirhandbook.com/ru)  
 
@@ -64,7 +64,7 @@ a column separator -->
 -   [**contact\@appliedepi.org**](mailto:contact@appliedepi.org){.email}, tweet [**\@appliedepi**](https://twitter.com/appliedepi), ou [**LinkedIn**](www.linkedin.com/company/appliedepi)\
 -   Envie problemas para o nosso [**repositório Github**](https://github.com/appliedepi/epiRhandbook_eng)
 
-**Oferecemos treinamento em R ao vivo** ministrado por instrutores com décadas de experiência em epidemiologia aplicada - envie-nos um e-mail para discutir.
+**Oferecemos treinamento em R ao vivo** ministrado por instrutores com décadas de experiência em epidemiologia aplicada - [www.appliedepi.org/live](www.appliedepi.org/live).
 
 </div>
 :::
