--- a/index.qmd
+++ b/index.qmd
@@ -30,11 +30,11 @@ knitr::include_graphics(here::here("images", "Epi R Handbook banner beige 1500x5
 
 ## R for applied epidemiology and public health {.unnumbered}
 
-**Usage**: This handbook has been used over **1 million times by 450,000 people** around the world.
+**Usage**: This handbook has been used over **3 million times by 850,000 people** around the world.
 
 **Objective:** Serve as a quick R code reference manual (online and [**offline**](#data-used)**)**) with task-centered examples that address common epidemiological problems.
 
-**Are you just starting with R?** Try our [**free interactive tutorials**](https://www.appliedepi.org/tutorial/) or synchronous, virtual [**intro course**](https://www.appliedepi.org/live/) used by US CDC, WHO, and 75+ other health agencies and Field Epi Training Programs worldwide.
+**Are you just starting with R?** Try our [**free interactive tutorials**](https://www.appliedepi.org/tutorial/) or synchronous, virtual [**intro course**](https://www.appliedepi.org/live/) used by US CDC, WHO, and 400+ other health agencies and Field Epi Training Programs worldwide.
 
 **Languages:** [French (Français)](https://epirhandbook.com/fr), [Spanish (Español)](https://epirhandbook.com/es/), [Vietnamese (Tiếng Việt)](https://epirhandbook.com/vn/), [Japanese (日本)](https://epirhandbook.com/jp/), [Turkish (Türkçe)](https://epirhandbook.com/tr/), [Portuguese (Português)](https://epirhandbook.com/pt), [Russian (Русский)](https://epirhandbook.com/ru)
 
@@ -74,9 +74,9 @@ a column separator -->
 
 -   Visit our [**website**](http://www.appliedepi.org) and [**join our contact list**](https://forms.gle/9awNd8syypTSYUsn7)\
 -   **contact\@appliedepi.org**, tweet [**\@appliedepi**](https://twitter.com/appliedepi), or [**LinkedIn**](www.linkedin.com/company/appliedepi)\
--   Submit issues to our [**Github repository**](https://github.com/appliedepi/epiRhandbook_eng)
+-   Submit issues to our [**Github repository**](https://github.com/appliedepi/epiRhandbook)
 
-**We offer live R training** from instructors with decades of applied epidemiology experience - email us to discuss.
+**We offer live R training** from instructors with decades of applied epidemiology experience - [www.appliedepi.org/live](www.appliedepi.org/live).
 
 </div>
 :::
