--- a/index.ru.qmd
+++ b/index.ru.qmd
@@ -30,11 +30,11 @@ knitr::include_graphics(here::here("images", "Epi R Handbook Banner Russian 1500
 
 ## R для прикладной эпидемиологии и общественного здравоохранения {-}  
 
-**Использование**: Настоящее руководство было использовано более **1 миллиона раз 300 000 человек** по всему миру.
+**Использование**: Настоящее руководство было использовано более **3 миллиона раз 850 000 человек** по всему миру.
 
 **Задача:** Служит кратким справочником по R (онлайн и **[оффлайн][Скачивание руководства и данных]**) с примерами, ориентированными на задачи, которые направлены на часто встречающиеся проблемы в эпидемиологии.  
 
-**Вы только начинаете работать с R?** Воспользуйтесь нашими **[бесплатными интерактивными самоучителями](https://www.appliedepi.org/tutorial/)** или синхронным виртуальным **[вводным курсом](https://www.appliedepi.org/live/)** который используют CDC США, ВОЗ, а также более 75+ других медицинских организаций и Программ обучения прикладных эпидемиологов по всему миру.  
+**Вы только начинаете работать с R?** Воспользуйтесь нашими **[бесплатными интерактивными самоучителями](https://www.appliedepi.org/tutorial/)** или синхронным виртуальным **[вводным курсом](https://www.appliedepi.org/live/)** который используют CDC США, ВОЗ, а также более 400+ других медицинских организаций и Программ обучения прикладных эпидемиологов по всему миру.  
 
 **Языки:** [Английский (English)](https://epirhandbook.com/en/), [Французский (Français)](https://epirhandbook.com/fr), [испанский (Español)](https://epirhandbook.com/es/), [вьетнамский (Tiếng Việt)](https://epirhandbook.com/vn/), [Японский (日本)](https://epirhandbook.com/jp/), [турецкий (Türkçe)](https://epirhandbook.com/tr/), [португальский (Português)](https://epirhandbook.com/pt), [Русский](https://epirhandbook.com/ru)
 
@@ -79,7 +79,7 @@ knitr::include_graphics(here::here("images", "Applied_Epi_logo.png"))
 * **contact@appliedepi.org**, твиттер **[\@appliedepi](https://twitter.com/appliedepi)**, или **[LinkedIn](www.linkedin.com/company/appliedepi)**  
 * О проблемах сообщайте в нашем **[репозитории Github](https://github.com/appliedepi/epiRhandbook_eng)**  
 
-**Мы предлагаем онлайн обучение по R** от инструкторов с десятилетиями опыта в прикладной эпидемиологии - напишите нам для обсуждения.
+**Мы предлагаем онлайн обучение по R** от инструкторов с десятилетиями опыта в прикладной эпидемиологии - [www.appliedepi.org/live](www.appliedepi.org/live).
 :::
 
 ::::
@@ -102,7 +102,7 @@ knitr::include_graphics(here::here("images", "Applied_Epi_logo.png"))
 
 **Оффлайн версия**  
 
-См. инструкции на странице [Скачивание руководства и данных].  
+См. инструкции на странице Скачивание руководства и данных.  
 
 
 
