--- a/index.tr.qmd
+++ b/index.tr.qmd
@@ -30,11 +30,11 @@ knitr::include_graphics(here::here("images", "Epi R Handbook Banner Turkish Rehb
 
 ## Uygulamalı epidemiyoloji ve halk sağlığı için R {-}  
 
-**Kullanımı**: Bu çevrimiçi kitap, dünya çapında **300.000 kişi tarafından 1 milyondan fazla kez** kullanılmıştır.
+**Kullanımı**: Bu çevrimiçi kitap, dünya çapında **850.000 kişi tarafından 3 milyondan fazla kez** kullanılmıştır.
 
 **Hedef:** Yaygın epidemiyolojik sorunlara çözümler üreten, pratik, hedef odaklı ve hızlı bir (çevrimiçi ve **[çevrimdışı][El Kitabı ve verileri indirme]**) referans kılavuz olarak rol oynamak.
 
-**R'a yeni mi başlıyorsun?** Ücretsiz **[interaktif eğitimlerimiz](https://www.appliedepi.org/tutorial/)** ya da senkronize, sanal **[kurslarımız](https://www.appliedepi.org/live/)** Amerika CDC, Dünya Sağlık Örgütü dahil olmak üzere 75'ten fazla sağlık örgütü ve saha eğitim programlarında kullanıldı.  
+**R'a yeni mi başlıyorsun?** Ücretsiz **[interaktif eğitimlerimiz](https://www.appliedepi.org/tutorial/)** ya da senkronize, sanal **[kurslarımız](https://www.appliedepi.org/live/)** Amerika CDC, Dünya Sağlık Örgütü dahil olmak üzere 400'ten fazla sağlık örgütü ve saha eğitim programlarında kullanıldı.  
 
 **Diller:** [İngilizce (English)](https://epirhandbook.com/en/), [Vietnamca (Tiếng Việt)](https://epirhandbook.com/vn/), [Japonca (日本)](https://epirhandbook.com/jp/), [İspanyolca (Español)](https://epirhandbook.com/es/) [Türkçe](https://epirhandbook.com/tr/), [Fransızca (Français)](https://epirhandbook.com/fr), [Portekizce (Português)](https://epirhandbook.com/pt),  [Rusça (Русский)](https://epirhandbook.com/ru)  
 
@@ -79,7 +79,7 @@ a column separator -->
 * **contact@appliedepi.org** mail adresimiz, **[\@appliedepi](https://twitter.com/appliedepi)** twitter veya **[LinkedIn](www.linkedin.com/company/appliedepi)** hesabımızdan bize ulaşabilirsiniz.  
 * **[Github sunucumuza](https://github.com/appliedepi/epiRhandbook_eng)** sorunlarınızı bildirebilirsiniz. 
 
-Onlarca yıllık epidemiyoloji deneyimine sahip eğitmenlerimizle **canlı R eğitimi sunuyoruz** - başvurmak için bize e-mail atabilirsiniz.
+Onlarca yıllık epidemiyoloji deneyimine sahip eğitmenlerimizle **canlı R eğitimi sunuyoruz** - [www.appliedepi.org/live](www.appliedepi.org/live).
 :::
 
 ::::
