--- a/index.jp.qmd
+++ b/index.jp.qmd
@@ -31,11 +31,11 @@ knitr::include_graphics(here::here("images", "Epi R Handbook Banner Japanese 150
 ## 疫学や公衆衛生に関わる業務のための R {-}  
 
 
-**利用実績**: 本ハンドブックは、世界中 **45 万人に 100 万回以上** 利用されています。
+**利用実績**: 本ハンドブックは、世界中 **85 万人に 300 万回以上** 利用されています。
 
 **目的:** 疫学業務や研究で頻繁に直面する課題に対する対処法の実例を扱い、素早く使用できる R のリファレンスマニュアルとしてオンラインでも**[オフライン](#data-used)**でも機能する  
 
-**R を始めたばかりですか？** アメリカ CDC、WHO、その他 75 以上の保健機関および世界中のフィールドエピトレーニングプログラムで使用されている **[無料の自己学習型チュートリアル](https://www.appliedepi.org/tutorial/)** または、、ライブリモート型の **[intro course](https://www.appliedepi.org/live/)** を試してください
+**R を始めたばかりですか？** アメリカ CDC、WHO、その他 400 以上の保健機関および世界中のフィールドエピトレーニングプログラムで使用されている **[無料の自己学習型チュートリアル](https://www.appliedepi.org/tutorial/)** または、、ライブリモート型の **[intro course](https://www.appliedepi.org/live/)** を試してください
 
 **本書は他の言語でも利用できます:** [英語 (English)](https://epirhandbook.com/en/), [ベトナム語 (Tiếng Việt)](https://epirhandbook.com/vn/), [フランス語 (Français)](https://epirhandbook.com/fr), [スペイン語 (Español)](https://epirhandbook.com/es/), [日本語](https://epirhandbook.com/jp/), [トルコ語 (Türkçe)](https://epirhandbook.com/tr/), [ポルトガル語 (Português)](https://epirhandbook.com/pt/), [ロシア (Русский)](https://epirhandbook.com/ru)  
 
@@ -79,9 +79,9 @@ a column separator -->
 * 公式ウェブサイト（英語）は **[こちら](http://www.appliedepi.org)**
 * メーリングリスト（英語）への登録は **[こちら](https://forms.gle/9awNd8syypTSYUsn7)**  
 * メールでのお問い合わせ先（英語）： **contact@appliedepi.org** 
-* ツイッター： **[\@epiRhandbook](https://twitter.com/epirhandbook)**（英語） **[\@epiRhandbook_jp](https://twitter.com/epirhandbook_jp)**（日本語）
+* ツイッター： **[\@epiRhandbook](https://twitter.com/epirhandbook)**（英語） **[\@epiRhandbook_jp](https://twitter.com/epirhandbook)**（日本語）
 * LinkedIn（英語）は **[こちら](https://linkedin.com/company/appliedepi)**
-* Github でのイシュー（Issue）の作成は、**[こちら](https://github.com/appliedepi/epiRhandbook_jp)** （英語・日本語どちらでも可） 
+* Github でのイシュー（Issue）の作成は、**[こちら](https://github.com/appliedepi/epiRhandbook_eng)** （英語・日本語どちらでも可） 
 
 また、数十年にわたる疫学や疫学実務の経験を持つ講師による**リアルタイムの R トレーニング**も提供しています（現在は英語のみ）。ご興味のある方は、メールでご相談ください。
 :::
