update usership numbers across all languages in output html

--- a/index.vn.qmd
+++ b/index.vn.qmd
@@ -74,7 +74,7 @@ Applied Epi là một tổ chức phi lợi nhuận của các nhà dịch tễ 
 * Gửi các vấn đề cho chúng tôi tại **[Github repository](https://github.com/appliedepi/epiRhandbook_eng)**
 * Các góp ý liên quan tới bản dịch, vui lòng liên hệ **[Trưởng nhóm dịch](mailto:luong.nguyen@appliedepi.com)**
 
-**Chúng tôi cũng cung cấp** các khóa học trực tuyến với đội ngũ giảng viên giàu kinh nghiệm đến từ khắp mọi nơi trên thế giới. Hãy liên hệ với chúng tôi nếu bạn cần sự hỗ trợ.
+**Chúng tôi cũng cung cấp** các khóa học trực tuyến với đội ngũ giảng viên giàu kinh nghiệm đến từ khắp mọi nơi trên thế giới. Liên hệ tại [www.appliedepi.org/live](www.appliedepi.org/live).
 
 
 <form target="_blank" action="https://www.paypal.com/donate" method="post" target="_top">
