--- a/index.qmd
+++ b/index.qmd
@@ -32,7 +32,7 @@ knitr::include_graphics(here::here("images", "Epi R Handbook banner beige 1500x5
 
 **Usage**: This handbook has been used over **3 million times by 850,000 people** around the world.
 
-**Objective:** Serve as a quick R code reference manual (online and [**offline**](#data-used)**)**) with task-centered examples that address common epidemiological problems.
+**Objective:** Serve as a quick R code reference manual (online and [**offline**](#data-used)) with task-centered examples that address common epidemiological problems.
 
 **Are you just starting with R?** Try our [**free interactive tutorials**](https://www.appliedepi.org/tutorial/) or synchronous, virtual [**intro course**](https://www.appliedepi.org/live/) used by US CDC, WHO, and 400+ other health agencies and Field Epi Training Programs worldwide.
 
