update broken links in ru version

--- a/index.ru.qmd
+++ b/index.ru.qmd
@@ -32,7 +32,7 @@ knitr::include_graphics(here::here("images", "Epi R Handbook Banner Russian 1500
 
 **Использование**: Настоящее руководство было использовано более **3 миллиона раз 850 000 человек** по всему миру.
 
-**Задача:** Служит кратким справочником по R (онлайн и **[оффлайн][Скачивание руководства и данных]**) с примерами, ориентированными на задачи, которые направлены на часто встречающиеся проблемы в эпидемиологии.  
+**Задача:** Служит кратким справочником по R (онлайн и [**оффлайн**](data_used.ru.qmd)) с примерами, ориентированными на задачи, которые направлены на часто встречающиеся проблемы в эпидемиологии.  
 
 **Вы только начинаете работать с R?** Воспользуйтесь нашими **[бесплатными интерактивными самоучителями](https://www.appliedepi.org/tutorial/)** или синхронным виртуальным **[вводным курсом](https://www.appliedepi.org/live/)** который используют CDC США, ВОЗ, а также более 400+ других медицинских организаций и Программ обучения прикладных эпидемиологов по всему миру.  
 
@@ -98,11 +98,11 @@ knitr::include_graphics(here::here("images", "Applied_Epi_logo.png"))
 
 * Просматривайте страницы в Содержании, либо используйте поле поиска
 * Кликните на икноки "копировать", чтобы скопировать код  
-* Вы можете работать параллельно с помощью [примера данных][Скачивание руководства и данных]  
+* Вы можете работать параллельно с помощью [примера данных](data_used.ru.qmd)  
 
 **Оффлайн версия**  
 
-См. инструкции на странице Скачивание руководства и данных.  
+См. инструкции на странице [Скачивание руководства и данных](data_used.ru.qmd).  
 
 
 
