--- a/new_pages/basics.qmd
+++ b/new_pages/basics.qmd
@@ -306,6 +306,11 @@ This basics section on functions explains:
 sqrt(49)
 ```
 
+Another example of function
+```{r basics_function_round}
+round(3.14159, 2)
+```
+
 The object provided to a function also can be a column in a dataset (see the [Objects](#objects) section for detail on all the kinds of objects). Because R can store multiple datasets, you will need to specify both the dataset and the column. One way to do this is using the `$` notation to link the name of the dataset and the name of the column (`dataset$column`). In the example below, the function `summary()` is applied to the numeric column `age` in the dataset `linelist`, and the output is a summary of the column's numeric and missing values.
 
 ```{r basics_functions_summary}
