--- a/index.qmd
+++ b/index.qmd
@@ -117,6 +117,8 @@ This handbook is **not** an approved product of any specific organization. Altho
 
 **Illustrations**: Calder Fong
 
+**Translation**: Thanks all translators for contributing to the handbook in French, Spanish, Vietnamese, Japanese, Turkish, Portuguese, and Russian.
+
 <!-- **Editor-in-Chief:** Neale Batra  -->
 
 <!-- **Project core team:** Neale Batra, Alex Spina, Amrish Baidjoe, Pat Keating, Henry Laurenson-Schafer, Finlay Campbell   -->
