--- a/index.vn.qmd
+++ b/index.vn.qmd
@@ -67,7 +67,7 @@ a column separator -->
 
 [**Được viết bởi các nhà dịch tễ học, dành cho các nhà dịch tễ học**]{style="color: black;"}
 
-Applied Epi là một tổ chức phi lợi nhuận của các nhà dịch tễ học thực địa từ khắp mọi nơi trên thế giới. Chúng tôi dành thời gian rảnh rỗi của mình để viết và cung cấp tài liệu này cho cộng đồng. Mọi lời động viên khuyến khích và phản hồi của bạn đều được chúng tôi chào đón:
+Applied Epi là một tổ chức phi lợi nhuận tập hợp các nhà dịch tễ học thực địa từ mọi miền trên thế giới. Với tâm huyết và thời gian rảnh rỗi của mình, chúng tôi viết và cung cấp tài liệu này cho cộng đồng. Mọi lời động viên và phản hồi từ bạn đều được chúng tôi trân trọng và chào đón
 
 * Truy cập **[website](http://www.appliedepi.org)** của chúng tôi và **[ghi danh vào danh sách liên lạc](https://forms.gle/9awNd8syypTSYUsn7)**  
 * **contact@appliedepi.org**, tweet **[\@appliedepi](https://twitter.com/appliedepi)**, hoặc **[LinkedIn](www.linkedin.com/company/appliedepi)**  
