Correct file extension in rmarkdown.pt.qmd

--- a/new_pages/rmarkdown.pt.qmd
+++ b/new_pages/rmarkdown.pt.qmd
@@ -670,7 +670,7 @@ Como acima, crie um novo conjunto de slides ou use um arquivo PowerPoint existen
 
 
 ```{r out.width = "100%", fig.align = "center", echo=F}
-knitr::include_graphics(here::here("images", "markdown/8_ppttemplate.PNG"))
+knitr::include_graphics(here::here("images", "markdown/8_ppttemplate.png"))
 ```
 
 Infelizmente, editar arquivos PowerPoint é um pouco menos flexível:
