--- a/index.ar.qmd
+++ b/index.ar.qmd
@@ -1,4 +1,4 @@
-# Welcome {.unnumbered}
+# ترحيب {.unnumbered}
 
 ```{r, out.width = "100%", fig.align = "center", echo=F}
 knitr::include_graphics(here::here("images", "Epi R Handbook banner beige 1500x500.png"))
@@ -6,53 +6,21 @@ knitr::include_graphics(here::here("images", "Epi R Handbook banner beige 1500x5
 # opts_chunk$set(list(echo = FALSE, eval = FALSE))
 ```
 
-<meta name="description" content="The Epi R Handbook is an R reference manual for applied epidemiology and public health.">
+<meta name="description" content="دليل R للوبائيات التطبيقية والصحة العامة.">
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
-<!-- <span style="color: red;">**THIS IS A DRAFT.  REVIEWERS GIVE FEEDBACK AT THIS [LINK](https://forms.gle/4RNdRRLGx67xW9yq9)**.</span> -->
+## R للوبائيات التطبيقية والصحة العامة {.unnumbered}
 
-<!-- <span style="color: darkgreen;">**DO YOU LIKE THIS HANDBOOK? SHOULD SOMETHING BE CHANGED? PLEASE TELL US!**</span> -->
+**الاستخدام**: تم استخدام هذا الدليل أكثر من **3 مليون مرة بواسطة 850,000 شخص** حول العالم.
 
-<!-- <form target="_blank" action="https://forms.gle/A5SnRVws7tPD15Js9"> -->
+**الهدف:** خدمة كدليل مرجعي سريع لرمز R (عبر الإنترنت و [**بدون اتصال**](#data-used)) مع أمثلة مركزة على المهام التي تعالج المشكلات الوبائية الشائعة.
 
-<!--     <input type="submit" value="FEEDBACK" /> -->
+**هل أنت مبتدئ في استخدام R؟** جرب [**الدروس التفاعلية المجانية**](https://www.appliedepi.org/tutorial/) أو [**الدورة التمهيدية**](https://www.appliedepi.org/live/) المستخدمة من قبل مراكز مكافحة الأمراض والوقاية منها في الولايات المتحدة والمنظمة العالمية للصحة وأكثر من 400 وكالة صحية وبرامج تدريب وبائي ميداني في جميع أنحاء العالم.
 
-<!-- </form> -->
+**اللغات:** [الفرنسية (Français)](https://epirhandbook.com/fr)، [الإسبانية (Español)](https://epirhandbook.com/es/)، [الفيتنامية (Tiếng Việt)](https://epirhandbook.com/vn/)، [اليابانية (日本)](https://epirhandbook.com/jp/)، [التركية (Türkçe)](https://epirhandbook.com/tr/)، [البرتغالية (Português)](https://epirhandbook.com/pt/)، [الروسية (Русский)](https://epirhandbook.com/ru)
 
-<!-- ======================================================= -->
-
-<!-- ## An R reference manual for applied epidemiology and public health {.unnumbered} -->
-
-<!-- <span style="color: brown;">**The Epi R Handbook is an R reference manual for applied epidemiology and public health.**</span> -->
-
-<!-- ## About this handbook   -->
-
-## R for applied epidemiology and public health {.unnumbered}
-
-**Usage**: This handbook has been used over **3 million times by 850,000 people** around the world.
-
-**Objective:** Serve as a quick R code reference manual (online and [**offline**](#data-used)) with task-centered examples that address common epidemiological problems.
-
-**Are you just starting with R?** Try our [**free interactive tutorials**](https://www.appliedepi.org/tutorial/) or synchronous, virtual [**intro course**](https://www.appliedepi.org/live/) used by US CDC, WHO, and 400+ other health agencies and Field Epi Training Programs worldwide.
-
-**Languages:** [French (Français)](https://epirhandbook.com/fr), [Spanish (Español)](https://epirhandbook.com/es/), [Vietnamese (Tiếng Việt)](https://epirhandbook.com/vn/), [Japanese (日本)](https://epirhandbook.com/jp/), [Turkish (Türkçe)](https://epirhandbook.com/tr/), [Portuguese (Português)](https://epirhandbook.com/pt), [Russian (Русский)](https://epirhandbook.com/ru)
-
-<!-- * Use practical epi examples - cleaning case linelists, making transmission chains and epidemic curves, automated reports and dashboards, modeling incidence and making projections, demographic pyramids and rate standardization, record matching, outbreak detection, survey analysis, survival analysis, GIS basics, contact tracing, phylogenetic trees...   -->
-
-<!-- **How is this different than other R books?**   -->
-
-<!-- * It is community-driven - *written for epidemiologists by epidemiologists* in their spare time and leveraging experience in local, national, academic, and emergency settings   -->
-
-<!-- Dual-column created based on the rmarkdown cookbook here: https://bookdown.org/yihui/rmarkdown-cookbook/multi-column.html -->
-
-<!-- <form target="_blank" action="https://www.paypal.com/donate?hosted_button_id=YTEZELC8VBXV6"> -->
-
-<!--     <input type="submit" value="Donate to maintain this resource" /> -->
-
-<!-- </form> -->
-
-<br> [**Written by epidemiologists, for epidemiologists**]{style="color: black;"}
+<br> [**كتبه وبائيون، للوبائيين**]{style="color: black;"}
 
 ::: {style="display: flex;"}
 <div>
@@ -63,20 +31,20 @@ knitr::include_graphics(here::here("images", "Applied_Epi_logo.png"))
 
 </div>
 
-::: {.col data-latex="{0.05\\textwidth}"}
-  <!-- an empty Div (with a white space), serving as
+::: {.col data-latex="{0.05\\\\textwidth}"}
+\xa0 <!-- an empty Div (with a white space), serving as
 a column separator -->
 :::
 
 <div>
 
-[**Applied Epi**](http://www.appliedepi.org) is a nonprofit organisation and grassroots movement of frontline epis from around the world. We write in our spare time to offer this resource to the community. Your encouragement and feedback is most welcome:
+[**Applied Epi**](http://www.appliedepi.org) هي منظمة غير ربحية وحركة شعبية من وبائيين من جميع أنحاء العالم. نكتب في أوقات فراغنا لتقديم هذا المورد للمجتمع. تشجيعك وملاحظاتك مرحب بها:
 
--   Visit our [**website**](http://www.appliedepi.org) and [**join our contact list**](https://forms.gle/9awNd8syypTSYUsn7)\
--   **contact\@appliedepi.org**, tweet [**\@appliedepi**](https://twitter.com/appliedepi), or [**LinkedIn**](www.linkedin.com/company/appliedepi)\
--   Submit issues to our [**Github repository**](https://github.com/appliedepi/epiRhandbook_eng)
+-   زر [**موقعنا**](http://www.appliedepi.org) و [**انضم إلى قائمة جهات الاتصال**](https://forms.gle/9awNd8syypTSYUsn7)
+-   **contact@appliedepi.org**، تغريد [**@appliedepi**](https://twitter.com/appliedepi)، أو [**LinkedIn**](www.linkedin.com/company/appliedepi)
+-   قدم مشكلات إلى [**مستودع Github**](https://github.com/appliedepi/epiRhandbook_eng)
 
-**We offer live R training** from instructors with decades of applied epidemiology experience - [www.appliedepi.org/live](www.appliedepi.org/live).
+**نحن نقدم تدريبًا مباشرًا على R** من مدربين لديهم عقود من الخبرة في الوبائيات التطبيقية - [www.appliedepi.org/live](www.appliedepi.org/live).
 
 </div>
 :::
@@ -87,85 +55,68 @@ a column separator -->
 
 </form>
 
-<!-- ======================================================= -->
+## كيفية استخدام هذا الدليل {.unnumbered}
 
-## How to use this handbook {.unnumbered}
+-   تصفح الصفحات في جدول المحتويات، أو استخدم مربع البحث
+-   انقر على أيقونات "نسخ" لنسخ الرمز
+-   يمكنك المتابعة مع [البيانات المستخدمة](#data-used)
 
--   Browse the pages in the Table of Contents, or use the search box
--   Click the "copy" icons to copy code\
--   You can follow-along with [the example data](#data-used)
+**الإصدار بدون اتصال**
 
-**Offline version**
+انظر التعليمات في صفحة [تنزيل الدليل والبيانات](#data-used).
 
-See instructions in the [Download handbook and data](#data-used) page.
+## الشكر والتقدير {.unnumbered}
 
-<!-- ======================================================= -->
+تم إنتاج هذا الدليل بواسطة تعاون مستقل للوبائيين من جميع أنحاء العالم باستخدام الخبرة مع المنظمات بما في ذلك الوكالات الصحية المحلية والولائية والإقليمية والوطنية، ومنظمة الصحة العالمية (WHO)، وأطباء بلا حدود (MSF)، ونظم المستشفيات، والمؤسسات الأكاديمية.
 
-## Acknowledgements {.unnumbered}
+لا يُعتبر هذا الدليل منتجًا معتمدًا من أي منظمة محددة. على الرغم من سعينا للدقة، لا نقدم أي ضمان لمحتوى هذا الكتاب.
 
-This handbook is produced by an independent collaboration of epidemiologists from around the world drawing upon experience with organizations including local, state, provincial, and national health agencies, the World Health Organization (WHO), Doctors without Borders (MSF), hospital systems, and academic institutions.
+### المساهمون {.unnumbered}
 
-This handbook is **not** an approved product of any specific organization. Although we strive for accuracy, we provide no guarantee of the content in this book.
+**المحرر:** [Neale Batra](https://www.linkedin.com/in/neale-batra/)
 
-### Contributors {.unnumbered}
+**المؤلفون**: [Neale Batra](https://www.linkedin.com/in/neale-batra/)، [Alex Spina](https://github.com/aspina7)، [Paula Blomquist](https://www.linkedin.com/in/paula-bianca-blomquist-53188186/)، [Finlay Campbell](https://github.com/finlaycampbell)، [Henry Laurenson-Schafer](https://github.com/henryls1)، [Isaac Florence](www.Twitter.com/isaacatflorence)، [Natalie Fischer](https://www.linkedin.com/in/nataliefischer211/)، [Aminata Ndiaye](https://twitter.com/aminata_fadl)، [Liza Coyer](https://www.linkedin.com/in/liza-coyer-86022040/)، [Jonathan Polonsky](https://twitter.com/jonny_polonsky)، [Yurie Izawa](https://ch.linkedin.com/in/yurie-izawa-a1590319)، [Chris Bailey](https://twitter.com/cbailey_58?lang=en)، [Daniel Molling](https://www.linkedin.com/in/daniel-molling-4005716a/)، [Isha Berry](https://twitter.com/ishaberry2)، [Emma Buajitti](https://twitter.com/buajitti)، [Mathilde Mousset](https://mathildemousset.wordpress.com/research/)، [Sara Hollis](https://www.linkedin.com/in/saramhollis/)، Wen Lin
 
-**Editor:** [Neale Batra](https://www.linkedin.com/in/neale-batra/)
+**المراجعون والداعمون**: Pat Keating، [Amrish Baidjoe](https://twitter.com/Ammer_B)، Annick Lenglet، Margot Charette، Danielly Xavier، Marie-Amélie Degail Chabrat، Esther Kukielka، Michelle Sloan، Aybüke Koyuncu، Rachel Burke، Kate Kelsey، [Berhe Etsay](https://www.linkedin.com/in/berhe-etsay-5752b1154/)، John Rossow، Mackenzie Zendt، James Wright، Laura Haskins، [Flavio Finger](ffinger.github.io)، Tim Taylor، [Jae Hyoung Tim Lee](https://www.linkedin.com/in/jaehyoungtlee/)، [Brianna Bradley](https://www.linkedin.com/in/brianna-bradley-bb8658155)، [Wayne Enanoria](https://www.linkedin.com/in/wenanoria)، Manual Albela Miranda، [Molly Mantus](https://www.linkedin.com/in/molly-mantus-174550150/)، Pattama Ulrich، Joseph Timothy، Adam Vaughan، Olivia Varsaneux، Lionel Monteiro، Joao Muianga
 
-**Authors**: [Neale Batra](https://www.linkedin.com/in/neale-batra/), [Alex Spina](https://github.com/aspina7), [Paula Blomquist](https://www.linkedin.com/in/paula-bianca-blomquist-53188186/), [Finlay Campbell](https://github.com/finlaycampbell), [Henry Laurenson-Schafer](https://github.com/henryls1), [Isaac Florence](www.Twitter.com/isaacatflorence), [Natalie Fischer](https://www.linkedin.com/in/nataliefischer211/), [Aminata Ndiaye](https://twitter.com/aminata_fadl), [Liza Coyer](https://www.linkedin.com/in/liza-coyer-86022040/), [Jonathan Polonsky](https://twitter.com/jonny_polonsky), [Yurie Izawa](https://ch.linkedin.com/in/yurie-izawa-a1590319), [Chris Bailey](https://twitter.com/cbailey_58?lang=en), [Daniel Molling](https://www.linkedin.com/in/daniel-molling-4005716a/), [Isha Berry](https://twitter.com/ishaberry2), [Emma Buajitti](https://twitter.com/buajitti), [Mathilde Mousset](https://mathildemousset.wordpress.com/research/), [Sara Hollis](https://www.linkedin.com/in/saramhollis/), Wen Lin
+**الرسومات**: Calder Fong
 
-**Reviewers and supporters**: Pat Keating, [Amrish Baidjoe](https://twitter.com/Ammer_B), Annick Lenglet, Margot Charette, Danielly Xavier, Marie-Amélie Degail Chabrat, Esther Kukielka, Michelle Sloan, Aybüke Koyuncu, Rachel Burke, Kate Kelsey, [Berhe Etsay](https://www.linkedin.com/in/berhe-etsay-5752b1154/), John Rossow, Mackenzie Zendt, James Wright, Laura Haskins, [Flavio Finger](ffinger.github.io), Tim Taylor, [Jae Hyoung Tim Lee](https://www.linkedin.com/in/jaehyoungtlee/), [Brianna Bradley](https://www.linkedin.com/in/brianna-bradley-bb8658155), [Wayne Enanoria](https://www.linkedin.com/in/wenanoria), Manual Albela Miranda, [Molly Mantus](https://www.linkedin.com/in/molly-mantus-174550150/), Pattama Ulrich, Joseph Timothy, Adam Vaughan, Olivia Varsaneux, Lionel Monteiro, Joao Muianga
+### التمويل والدعم {.unnumbered}
 
-**Illustrations**: Calder Fong
+كان هذا الكتاب في المقام الأول جهدًا تطوعيًا استغرق آلاف الساعات لإنشائه.
 
-<!-- **Editor-in-Chief:** Neale Batra  -->
+تلقى الدليل بعض التمويل الداعم من خلال منحة بناء القدرات الطارئة لـ COVID-19 من [TEPHINET](https://www.tephinet.org/)، الشبكة العالمية لبرامج تدريب الوبائيات الميدانية (FETPs).
 
-<!-- **Project core team:** Neale Batra, Alex Spina, Amrish Baidjoe, Pat Keating, Henry Laurenson-Schafer, Finlay Campbell   -->
+تم توفير الدعم الإداري من قبل شبكة خريجي EPIET ([EAN](https://epietalumni.net/))، مع شكر خاص لـ Annika Wendland. EPIET هو البرنامج الأوروبي لتدريب الوبائيات التدخلية.
 
-<!-- **Authors**: Neale Batra, Alex Spina, Paula Blomquist, Finlay Campbell, Henry Laurenson-Schafer, [Isaac Florence](www.Twitter.com/isaacatflorence), Natalie Fischer, Aminata Ndiaye, Liza Coyer, Jonathan Polonsky, Yurie Izawa, Chris Bailey, Daniel Molling, Isha Berry, Emma Buajitti, Mathilde Mousset, Sara Hollis, Wen Lin   -->
+شكر خاص لمنظمة أطباء بلا حدود (MSF) مركز العمليات في أمستردام (OCA) على دعمهم أثناء تطوير هذا الدليل.
 
-<!-- **Reviewers**: Pat Keating, Mathilde Mousset, Annick Lenglet, Margot Charette, Isha Berry, Paula Blomquist, Natalie Fischer, Daniely Xavier, Esther Kukielka, Michelle Sloan, Aybüke Koyuncu, Rachel Burke, Daniel Molling, Kate Kelsey, Berhe Etsay, John Rossow, Mackenzie Zendt, James Wright, Wayne Enanoria, Laura Haskins, Flavio Finger, Tim Taylor, Jae Hyoung Tim Lee, Brianna Bradley, Manual Albela Miranda, Molly Mantus, Priscilla Spencer, Pattama Ulrich, Joseph Timothy, Adam Vaughan, Olivia Varsaneux, Lionel Monteiro, Joao Muianga   -->
+### الإلهام {.unnumbered}
 
-### Funding and support {.unnumbered}
+قدمت مجموعة كبيرة من الدروس والنماذج المعرفة لتطوير محتوى الدليل، وتم الاعتراف بها داخل صفحاتها المعنية.
 
-This book was primarily a volunteer effort that took thousands of hours to create.
+بشكل أكثر عمومية، وفرت المصادر التالية إلهامًا لهذا الدليل:
+[مشروع "R4Epis"](https://r4epis.netlify.app/) (تعاون بين MSF و RECON)
+[R Epidemics Consortium (RECON)](https://www.repidemicsconsortium.org/)
+[كتاب R for Data Science (R4DS)](https://r4ds.had.co.nz/)
+[bookdown: Authoring Books and Technical Documents with R Markdown](https://bookdown.org/yihui/bookdown/)
+[Netlify](https://www.netlify.com) يستضيف هذا الموقع الإلكتروني
 
-The handbook received some supportive funding via a COVID-19 emergency capacity-building grant from [TEPHINET](https://www.tephinet.org/), the global network of Field Epidemiology Training Programs (FETPs).
+## شروط الاستخدام والمساهمة {.unnumbered}
 
-Administrative support was provided by the EPIET Alumni Network ([EAN](https://epietalumni.net/)), with special thanks to Annika Wendland. EPIET is the European Programme for Intervention Epidemiology Training.
+### الترخيص {.unnumbered}
 
-Special thanks to Médecins Sans Frontières (MSF) Operational Centre Amsterdam (OCA) for their support during the development of this handbook.
+<a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" alt="Creative Commons License" style="border-width:0"/></a> Applied Epi Incorporated، 2021 <br />هذا العمل مرخص بواسطة Applied Epi Incorporated بموجب <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">رخصة المشاع الإبداعي النسبية-غير التجارية-المشاركة بالمثل 4.0 الدولية</a>.
 
-*This publication was supported by Cooperative Agreement number NU2GGH001873, funded by the Centers for Disease Control and Prevention through TEPHINET, a program of The Task Force for Global Health. Its contents are solely the responsibility of the authors and do not necessarily represent the official views of the Centers for Disease Control and Prevention, the Department of Health and Human Services, The Task Force for Global Health, Inc. or TEPHINET.*
+مرحب بالدورات الأكاديمية وبرامج تدريب الوبائيين للاتصال بنا بشأن استخدام أو تكييف هذه المواد (البريد الإلكتروني **contact@appliedepi.org**).
 
-### Inspiration {.unnumbered}
+### الاقتباس {.unnumbered}
 
-The multitude of tutorials and vignettes that provided knowledge for development of handbook content are credited within their respective pages.
+Batra، Neale، وآخرون. دليل الوبائي R. 2021. <a rel="license" href="https://zenodo.org/badge/231610102.svg"><img src="https://zenodo.org/badge/231610102.svg" alt="DOI" style="border-width:0"/></a><br />
 
-More generally, the following sources provided inspiration for this handbook:\
-[The "R4Epis" project](https://r4epis.netlify.app/) (a collaboration between MSF and RECON)\
-[R Epidemics Consortium (RECON)](https://www.repidemicsconsortium.org/)\
-[R for Data Science book (R4DS)](https://r4ds.had.co.nz/)\
-[bookdown: Authoring Books and Technical Documents with R Markdown](https://bookdown.org/yihui/bookdown/)\
-[Netlify](https://www.netlify.com) hosts this website
+### المساهمة {.unnumbered}
 
-<!-- ### Image credits {-}   -->
+إذا كنت ترغب في تقديم مساهمة في المحتوى، يرجى الاتصال بنا أولاً عبر مشكلات Github أو عبر البريد الإلكتروني. نحن نقوم بتنفيذ جدول زمني للتحديثات وننشئ دليل المساهم.
 
-<!-- Images in logo from US CDC Public Health Image Library) include [2013 Yemen looking for mosquito breeding sites](https://phil.cdc.gov/Details.aspx?pid=19623), [Ebola virus](https://phil.cdc.gov/Details.aspx?pid=23186), and [Survey in Rajasthan](https://phil.cdc.gov/Details.aspx?pid=19838).   -->
-
-## Terms of Use and Contribution {.unnumbered}
-
-### License {.unnumbered}
-
-<a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" alt="Creative Commons License" style="border-width:0"/></a> Applied Epi Incorporated, 2021 <br />This work is licensed by Applied Epi Incorporated under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.
-
-Academic courses and epidemiologist training programs are welcome to contact us about use or adaptation of this material (email **contact\@appliedepi.org**).
-
-### Citation {.unnumbered}
-
-Batra, Neale, et al. The Epidemiologist R Handbook. 2021. <a rel="license" href="https://zenodo.org/badge/231610102.svg"><img src="https://zenodo.org/badge/231610102.svg" alt="DOI" style="border-width:0"/></a><br />
-
-### Contribution {.unnumbered}
-
-If you would like to make a content contribution, please contact with us first via Github issues or by email. We are implementing a schedule for updates and are creating a contributor guide.
-
-Please note that the epiRhandbook project is released with a [Contributor Code of Conduct](https://contributor-covenant.org/version/2/0/CODE_OF_CONDUCT.html). By contributing to this project, you agree to abide by its terms.
+يرجى ملاحظة أن مشروع epiRhandbook تم إصداره مع [قواعد السلوك للمساهمين](https://contributor-covenant.org/version/2/0/CODE_OF_CONDUCT.html). من خلال المساهمة في هذا المشروع، فإنك توافق على الالتزام بشروطها.
+```
