update offline book

--- a/new_pages/data_used.ru.qmd
+++ b/new_pages/data_used.ru.qmd
@@ -21,7 +21,7 @@
 
 ### Использовать ссылку для скачивания {.unnumbered}  
 
-Ждя быстрого доступа **правый щелчок** [по этой ссылке](https://github.com/appliedepi/epirhandbook_eng/raw/master/offline_long/Epi_R_Handbook_offline.html) **и выберите "Save link as - сохранить ссылку как"**.  
+Ждя быстрого доступа **правый щелчок** [по этой ссылке](https://github.com/appliedepi/epirhandbook_eng/raw/master/offline_long/index.ru.html) **и выберите "Save link as - сохранить ссылку как"**.  
 
 Если вы работаете на компьютере Mac, используйте Cmd+щелчок. Если вы используете мобильный телефон, нажмите и удерживайте ссылку, затем выберите "Сохранить ссылку". Руководство будет загружено на ваше устройство. Если появится окно с необработанным HTML-кодом, убедитесь, что вы выполнили приведенные выше инструкции, или попробуйте вариант 2.  
 
